src/aio/rmq_files/rabbit1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit1
  name: rabbit1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbit1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/rabbitmq-cluster: "true"
        io.kompose.service: rabbit1
    spec:
      containers:
      - env:
        - name: RABBITMQ_ERLANG_COOKIE
          value: secret string
        - name: RABBITMQ_NODENAME
          value: rabbit1
        image: rabbitmq:3-management
        imagePullPolicy: ""
        name: rabbit1
        ports:
        - containerPort: 4369
        - containerPort: 5671
        - containerPort: 5672
        - containerPort: 15671
        - containerPort: 15672
        - containerPort: 25672
        resources: {}
        volumeMounts:
        - mountPath: /etc/rabbitmq/rabbitmq.config
          name: rabbit1-claim0
        - mountPath: /etc/rabbitmq/definitions.json
          name: rabbit1-claim1
      hostname: rabbit1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: rabbit1-claim0
        persistentVolumeClaim:
          claimName: rabbit1-claim0
      - name: rabbit1-claim1
        persistentVolumeClaim:
          claimName: rabbit1-claim1
status: {}
