src/aio/rmq_files/rabbit1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -d -o rmq_files
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit1
  name: rabbit1
spec:
  ports:
  - name: "4369"
    port: 4369
    targetPort: 4369
  - name: "5671"
    port: 5671
    targetPort: 5671
  - name: "5672"
    port: 5672
    targetPort: 5672
  - name: "15671"
    port: 15671
    targetPort: 15671
  - name: "15672"
    port: 15672
    targetPort: 15672
  - name: "25672"
    port: 25672
    targetPort: 25672
  selector:
    io.kompose.service: rabbit1
status:
  loadBalancer: {}
