src/aio/rmq_files/rabbitmq-cluster-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: rabbitmq-cluster
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/rabbitmq-cluster: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rabbitmq-cluster: "true"
